--- a/README.Rmd
+++ b/README.Rmd
@@ -67,6 +67,17 @@ Numbers of trips between each pair of stations ('trip matrices') can then be
 obtained in square matrix form from
 ```{r, eval=FALSE}
 tmat <- tripmat ('spdb')
+format (sum (tmat), big.mark=',')
+```
+```{r, echo=FALSE}
+"2,886,218"
+```
+(This is only a small selection of all data.)
+```{r, eval=FALSE}
+dim (tmat)
+```
+```{r, echo=FALSE}
+c (330, 330)
 ```
 
 ### Filtering trips
@@ -77,12 +88,56 @@ temporal extent of the database can be readily viewed with
 get_datelimits ('spdb')
 ```
 ```{r, echo=FALSE}
-res <- c ("2014-08-01 00:00:04", "2014-11-16 08:50:59")
+res <- c ("2014-07-01 00:00:04", "2014-11-16 08:50:59")
 names (res) <- c ("first", "last")
 res
 ```
-And then, for example, a trip matrix constructed from trips beginning after a
-given date.
+The `tripmat` function accepts four optional arguments specifying `start_date`,
+`end_date`, `start_time`, and `end_time`.
+
+#### Filtering trips by date
+
+A trip matrix constructed from trips beginning after a given date with the
+`start_date` argument.
 ```{r, eval=FALSE}
 tmat <- tripmat ('spdb', start_date="20140901")
+format (sum (tmat), big.mark=',')
+```
+```{r, echo=FALSE}
+"953,887"
+```
+As expected, that reduces numbers of trips. End dates can also be specified
+```{r, eval=FALSE}
+tmat <- tripmat ('spdb', start_date=20140901, end_date="14/09/03")
+format (sum (tmat), big.mark=',')
+```
+```{r, echo=FALSE}
+"89,508"
+```
+Note that dates can be specified in almost any format, as long as the order is
+`year-month-day`.
+
+#### Filtering trips by time of day
+
+Trips can also be selected starting and/or ending at specific times of day.
+```{r, eval=FALSE}
+tmat <- tripmat ('spdb', start_time=0, end_time=1)
+format (sum (tmat), big.mark=',')
+```
+```{r, echo=FALSE}
+"34,508"
+```
+Single values are interpeted to specify hours, so the above request returns only
+those rides start at or after midnight (`00:00:00`) and finishing prior to and
+including 1am (`01:00:00`). Single numeric values of `23` are interpreted as the
+end of a day (`23:59:59`).
+
+Dates and times can of course be combined
+```{r, eval=FALSE}
+tmat <- tripmat ('spdb', start_date=20140901, end_date="14,09,01",
+                 start_time=6, end_time=9)
+format (sum (tmat), big.mark=',')
+```
+```{r, echo=FALSE}
+"354,574"
 ```
