improve filter_tmat_by_datetime; update readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,12 @@
 ---
-output: github_document
+title: "bikedata"
+output:
+  md_document:
+    variant: markdown_github
+    toc: true
+  #html_document:
+  #  variant: markdown_github
+  #  toc: true
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -16,14 +23,13 @@ knitr::opts_chunk$set(
 [![Project Status: Concept - Minimal or no implementation has been done yet.](http://www.repostatus.org/badges/0.1.0/concept.svg)](http://www.repostatus.org/#concept)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/bikedata)](http://cran.r-project.org/web/packages/bikedata) 
 
-# bikedata
 
 R package to load data from public bicycle hire systems. Currently a
 proof-of-concept that only loads data from the New York City [citibike
 scheme](https://www.citibikenyc.com/).
 
 
-## Installation
+# 1. Installation
 
 ```{r, eval=FALSE}
 devtools::install_github("mpadge/bikedata")
@@ -42,7 +48,7 @@ devtools::load_all (".")
 options(width=120)
 ```
 
-## Usage
+# 2. Usage
 
 ```{r, eval=FALSE, echo=FALSE}
 library(bikedata)
@@ -80,7 +86,7 @@ dim (tmat)
 c (330, 330)
 ```
 
-### Filtering trips
+## 2.1. Filtering trips by date
 
 Trip matrices can be constructed for trips filtered by dates and/or times. The
 temporal extent of the database can be readily viewed with
@@ -94,8 +100,6 @@ res
 ```
 The `tripmat` function accepts four optional arguments specifying `start_date`,
 `end_date`, `start_time`, and `end_time`.
-
-#### Filtering trips by date
 
 A trip matrix constructed from trips beginning after a given date with the
 `start_date` argument.
@@ -117,7 +121,7 @@ format (sum (tmat), big.mark=',')
 Note that dates can be specified in almost any format, as long as the order is
 `year-month-day`.
 
-#### Filtering trips by time of day
+## 2.2. Filtering trips by time of day
 
 Trips can also be selected starting and/or ending at specific times of day.
 ```{r, eval=FALSE}
@@ -125,7 +129,7 @@ tmat <- tripmat ('spdb', start_time=0, end_time=1)
 format (sum (tmat), big.mark=',')
 ```
 ```{r, echo=FALSE}
-"34,508"
+"34,512"
 ```
 Single values are interpeted to specify hours, so the above request returns only
 those rides start at or after midnight (`00:00:00`) and finishing prior to and
@@ -134,10 +138,10 @@ end of a day (`23:59:59`).
 
 Dates and times can of course be combined
 ```{r, eval=FALSE}
-tmat <- tripmat ('spdb', start_date=20140901, end_date="14,09,01",
+tmat <- tripmat ('spdb', start_date=20140901, end_date="14,09,03",
                  start_time=6, end_time=9)
 format (sum (tmat), big.mark=',')
 ```
 ```{r, echo=FALSE}
-"354,574"
+"10,715"
 ```
