--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 ```
 
 [![Build Status](https://travis-ci.org/mpadge/bikedata.svg)](https://travis-ci.org/mpadge/bikedata) 
+[![codecov](https://codecov.io/gh/mpadge/bikedata/branch/master/graph/badge.svg)](https://codecov.io/gh/mpadge/bikedata)
 [![Project Status: Concept - Minimal or no implementation has been done yet.](http://www.repostatus.org/badges/0.1.0/concept.svg)](http://www.repostatus.org/#concept)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/bikedata)](http://cran.r-project.org/web/packages/bikedata) 
 
@@ -65,10 +66,10 @@ dl_bikedata (data_dir='/tmp')
 ```
 The resultant files can then be read into an `spatialite` database with
 ```{r, eval=FALSE}
-store_bikedata_spl (data_dir='/tmp', 'spdb')
+store_bikedata (data_dir='/tmp', 'spdb')
 ```
 ```{r, eval=FALSE, echo=FALSE}
-store_bikedata_spl (data_dir='/data/data/bikes/nyc-temp', 'spdb')
+store_bikedata (data_dir='/data/data/bikes/nyc', 'spdb')
 ```
 
 Numbers of trips between each pair of stations ('trip matrices') can then be
