--- a/README.Rmd
+++ b/README.Rmd
@@ -1,13 +1,12 @@
 ---
 title: "bikedata"
 output:
-  md_document:
-    variant: markdown_github
+  github_document:
     toc: true
-  html_document:
-    toc: true
-    toc_float: true
-    theme: flatly
+  #html_document:
+  #  toc: true
+  #  toc_float: true
+  #  theme: flatly
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -33,7 +32,10 @@ proof-of-concept that only loads data from the New York City [citibike
 scheme](https://www.citibikenyc.com/).
 
 
-# 1. Installation
+------
+
+
+## 1 Installation
 
 ```{r, eval=FALSE}
 devtools::install_github("mpadge/bikedata")
@@ -52,7 +54,11 @@ devtools::load_all (".")
 options(width=120)
 ```
 
-# 2. Usage
+
+------
+
+
+## 2 Usage
 
 ```{r, eval=FALSE, echo=FALSE}
 library(bikedata)
@@ -91,7 +97,7 @@ dim (tmat)
 c (689, 689)
 ```
 
-## 2.1. Filtering trips by date
+### 2.1 Filtering trips by date
 
 Trip matrices can be constructed for trips filtered by dates and/or times. The
 temporal extent of the database can be readily viewed with
@@ -126,7 +132,7 @@ format (sum (tmat), big.mark=',')
 Note that dates can be specified in almost any format, as long as the order is
 `year-month-day`.
 
-## 2.2. Filtering trips by time of day
+### 2.2 Filtering trips by time of day
 
 Trips can also be selected starting and/or ending at specific times of day.
 ```{r, eval=FALSE}
@@ -151,7 +157,7 @@ format (sum (tmat), big.mark=',')
 "1,635,974"
 ```
 
-## 2.3. Filtering trips by day of week
+### 2.3 Filtering trips by day of week
 
 Trips can also extracted for particular days of the week by specifying the
 `weekday` argument of `tripmat`. Weekdays can be numeric, start from `1=Sunday`,
